Don't show fixed sidebar on small screens

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -194,5 +194,10 @@ ul.comments {
 
 .sidebar {
     @include box-sizing;
-    position: fixed;
+}
+
+@media (min-width: 980px) {
+    .sidebar {
+        position: fixed;
+    }
 }
